[package]
name    = "scss-modules"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Egor Trubnikov-Panov (https://github.com/egor-a-trubnikov-panov)"]
description = "Zed extension for navigating to SCSS module class definitions."
repository = "https://github.com/egor-a-trubnikov-panov/zed-scss-modules"
homepage = "https://github.com/egor-a-trubnikov-panov/zed-scss-modules"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.6.0"
